--- a/Voron Poster/Voron Poster.csproj
+++ b/Voron Poster/Voron Poster.csproj
@@ -22,8 +22,8 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <InstallUrl>https://raw.github.com/VoronFX/Voron-Poster/</InstallUrl>
-    <UpdateUrl>https://raw.github.com/VoronFX/Voron-Poster/</UpdateUrl>
+    <InstallUrl>https://raw.githubusercontent.com/VoronFX/Voron-Poster/master/Voron%2520Poster/publish/</InstallUrl>
+    <UpdateUrl>https://raw.githubusercontent.com/VoronFX/Voron-Poster/master/Voron%2520Poster/publish/</UpdateUrl>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
     <ApplicationRevision>1</ApplicationRevision>
