--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
+*text eol=crlf
 
 ###############################################################################
 # Set default behavior for command prompt diff.
