Finnally encoding was defeted and ForumvBulletin is working now

--- a/Voron Poster/Voron Poster.csproj
+++ b/Voron Poster/Voron Poster.csproj
@@ -126,6 +126,7 @@
     <Compile Include="DBTableLayoutPanel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ForumvBulletin.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
