ForumIPB added. Other changes.

--- a/Voron Poster/Voron Poster.csproj
+++ b/Voron Poster/Voron Poster.csproj
@@ -127,6 +127,7 @@
     <Compile Include="DBTableLayoutPanel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ForumIPB.cs" />
     <Compile Include="ForumvBulletin.cs" />
     <Compile Include="LogOutput.cs">
       <SubType>Form</SubType>
