ForumIBP param "f" advanced detection. ForumUniversal add logged Account add to dictionary. Scroll control under mouse. Ask for save and stop before closing app.

--- a/Luncher2/Luncher2.csproj
+++ b/Luncher2/Luncher2.csproj
@@ -73,9 +73,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Voron Poster.exe" />
-  </ItemGroup>
-  <ItemGroup>
+    <EmbeddedResource Include="Resources\Voron Poster.exe" />
     <Content Include="VoronPosterIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
