--- a/Voron Poster/packages.config
+++ b/Voron Poster/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Common.Logging" version="2.1.2" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
   <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net45" />
   <package id="ScriptCs.Contracts" version="0.9.0" targetFramework="net45" />
