Complete removed XPath requests. Detect if form is hide. Detect encoding if server headers are empty.

--- a/Voron Poster/Voron Poster.csproj
+++ b/Voron Poster/Voron Poster.csproj
@@ -169,6 +169,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Content Include="Licenses\MicrosoftPublicLicense.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\BuiltIn\%28built in%29 Опубликовать.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
