--- a/Voron Poster/Voron Poster.csproj
+++ b/Voron Poster/Voron Poster.csproj
@@ -162,6 +162,12 @@
     </Compile>
     <Compile Include="Forum.cs" />
     <Compile Include="ForumSMF.cs" />
+    <Compile Include="PostTaskGUI.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PostTaskGUI.Designer.cs">
+      <DependentUpon>PostTaskGUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -175,7 +181,7 @@
     <Content Include="Scripts\BuiltIn\%28built in%29 Опубликовать.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Compile Include="TaskGui.cs" />
+    <Compile Include="PostTask.cs" />
     <EmbeddedResource Include="CaptchaForm.resx">
       <DependentUpon>CaptchaForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -184,6 +190,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PostTaskGUI.resx">
+      <DependentUpon>PostTaskGUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
