Scripts added, script tester now showing input too, suggest MaxActiveTasks added

--- a/Voron Poster/Voron Poster.csproj
+++ b/Voron Poster/Voron Poster.csproj
@@ -127,6 +127,7 @@
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -179,6 +180,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Content Include="Scripts\BuiltIn\%28built in%29 Убрать IMG.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\BuiltIn\%28built in%29 Убрать URL.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\BuiltIn\%28built in%29 Убрать кавычки в URL.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Licenses\css2xpath.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
